# hackathon_IndabaX_2025_mlip

./: .gitignore  Dockerfile  README.md  evaluate.py  pyproject.toml  starter_notebook.ipynb
data/: test_public.xyz  validation.xyz
